// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ui5-test-writer - Integration tests Generate TypeScript OPA test files and add more pages 1`] = `
Object {
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"restaurant-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"description\\": \\"Restaurant List\\",
  \\"main\\": \\"webapp/index.html\\",
  \\"dependencies\\": {},
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"^2.14.1\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap/ux-ui5-fe-mockserver-middleware\\": \\"1\\"
  },
  \\"scripts\\": {
    \\"start\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
    \\"build\\": \\"ui5 build --clean-dest --dest dist\\",
    \\"test\\": \\"fiori run --open 'test/testsuite.qunit.html'\\"
  }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: restaurantapp
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        service:
          urlPath: /restaurant
          metadataXmlPath: ./webapp/localService/metadata.xml
          mockdataRootPath: ./webapp/localService/data
          generateMockData: true
",
    "state": "modified",
  },
  "webapp/Component.js": Object {
    "contents": "sap.ui.define(
    [\\"sap/fe/core/AppComponent\\"],
    function (Component) {
        \\"use strict\\";

        return Component.extend(\\"restaurantapp.Component\\", {
            metadata: {
                manifest: \\"json\\"
            }
        });
    }
);",
    "state": "modified",
  },
  "webapp/annotations/annotation.xml": Object {
    "contents": "<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\"/>
    </edmx:Reference>
    <edmx:Reference Uri=\\"/restaurant/$metadata\\">
        <edmx:Include Namespace=\\"RestaurantService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"local\\">
            <Annotations Target=\\"RestaurantService.Restaurant\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                        </Record>
                    </Collection>
                </Annotation>
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup1\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup1\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Dishes/@UI.LineItem#Menu\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Employees/@UI.LineItem#Staff\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Dish\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Menu\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"dishName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"dishName\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Employees\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Staff\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"fullName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"fullName\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"role\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"role\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.controller.js": Object {
    "contents": "sap.ui.define(
    [
        'sap/fe/core/PageController'
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('restaurantapp.ext.view.EmployeeView', {

        });
    }
);
",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
    xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"restaurantapp.ext.view.EmployeeView\\">
    <Page title=\\"EmployeeView\\">
        <content></content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "# This is the resource bundle for restaurantapp

#Texts for manifest.json

#XTIT: Application name
appTitle=Restaurant List

#YDES: Application description
appDescription=Restaurant List",
    "state": "modified",
  },
  "webapp/index.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Restaurant List</title>
    <style>
        html, body, body > div, #container, #container-uiarea {
            height: 100%;
        }
    </style>
    <script
        id=\\"sap-ui-bootstrap\\"
        src=\\"resources/sap-ui-core.js\\"
        data-sap-ui-theme=\\"sap_horizon\\"
        data-sap-ui-resourceroots='{
            \\"restaurantapp\\": \\"./\\"
        }'
        data-sap-ui-oninit=\\"module:sap/ui/core/ComponentSupport\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-frameOptions=\\"trusted\\"
    ></script>
</head>
<body class=\\"sapUiBody sapUiSizeCompact\\" id=\\"content\\">
    <div
        data-sap-ui-component
        data-name=\\"restaurantapp\\"
        data-id=\\"container\\"
        data-settings='{\\"id\\" : \\"restaurantapp\\"}'
        data-handle-validation=\\"true\\"
    ></div>
</body>
</html>",
    "state": "modified",
  },
  "webapp/localService/metadata.xml": Object {
    "contents": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:DataServices>
        <Schema Namespace=\\"RestaurantService\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
            <EntityContainer Name=\\"EntityContainer\\">
                <EntitySet Name=\\"Employees\\" EntityType=\\"RestaurantService.Employees\\"/>
                <EntitySet Name=\\"Dish\\" EntityType=\\"RestaurantService.Dish\\"/>
                <EntitySet Name=\\"Restaurant\\" EntityType=\\"RestaurantService.Restaurant\\">
                    <NavigationPropertyBinding Path=\\"_Dishes\\" Target=\\"Dish\\"/>
                    <NavigationPropertyBinding Path=\\"_Employees\\" Target=\\"Employees\\"/>
                </EntitySet>
            </EntityContainer>
            <EntityType Name=\\"Employees\\">
                <Key>
                    <PropertyRef Name=\\"employeeID\\"/>
                </Key>
                <Property Name=\\"employeeID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"fullName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"role\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Dish\\">
                <Key>
                    <PropertyRef Name=\\"dishID\\"/>
                </Key>
                <Property Name=\\"dishID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"dishName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Restaurant\\">
                <Key>
                    <PropertyRef Name=\\"ID\\"/>
                </Key>
                <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
                <NavigationProperty Name=\\"_Dishes\\" Type=\\"Collection(RestaurantService.Dish)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
                <NavigationProperty Name=\\"_Employees\\" Type=\\"Collection(RestaurantService.Employees)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
            </EntityType>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
  \\"_version\\": \\"1.40.0\\",
  \\"sap.app\\": {
    \\"id\\": \\"restaurantapp\\",
    \\"type\\": \\"application\\",
    \\"i18n\\": \\"i18n/i18n.properties\\",
    \\"applicationVersion\\": {
      \\"version\\": \\"0.0.1\\"
    },
    \\"title\\": \\"{{appTitle}}\\",
    \\"description\\": \\"{{appDescription}}\\",
    \\"resources\\": \\"resources.json\\",
    \\"sourceTemplate\\": {
      \\"id\\": \\"@sap/generator-fiori:lrop\\",
      \\"version\\": \\"1.7.1\\",
      \\"toolsId\\": \\"c4ddb756-9b8b-4c4e-8d46-5ef91b686336\\"
    },
    \\"dataSources\\": {
      \\"mainService\\": {
        \\"uri\\": \\"/restaurant/\\",
        \\"type\\": \\"OData\\",
        \\"settings\\": {
          \\"annotations\\": [
            \\"annotation\\"
          ],
          \\"localUri\\": \\"localService/metadata.xml\\",
          \\"odataVersion\\": \\"4.0\\"
        }
      },
      \\"annotation\\": {
        \\"type\\": \\"ODataAnnotation\\",
        \\"uri\\": \\"annotations/annotation.xml\\",
        \\"settings\\": {
          \\"localUri\\": \\"annotations/annotation.xml\\"
        }
      }
    }
  },
  \\"sap.ui\\": {
    \\"technology\\": \\"UI5\\",
    \\"icons\\": {
      \\"icon\\": \\"\\",
      \\"favIcon\\": \\"\\",
      \\"phone\\": \\"\\",
      \\"phone@2\\": \\"\\",
      \\"tablet\\": \\"\\",
      \\"tablet@2\\": \\"\\"
    },
    \\"deviceTypes\\": {
      \\"desktop\\": true,
      \\"tablet\\": true,
      \\"phone\\": true
    }
  },
  \\"sap.ui5\\": {
    \\"flexEnabled\\": true,
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.105.0\\",
      \\"libs\\": {
        \\"sap.m\\": {},
        \\"sap.ui.core\\": {},
        \\"sap.ushell\\": {},
        \\"sap.fe.templates\\": {}
      }
    },
    \\"contentDensities\\": {
      \\"compact\\": true,
      \\"cozy\\": true
    },
    \\"models\\": {
      \\"i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"settings\\": {
          \\"bundleName\\": \\"restaurantapp.i18n.i18n\\"
        }
      },
      \\"\\": {
        \\"dataSource\\": \\"mainService\\",
        \\"preload\\": true,
        \\"settings\\": {
          \\"synchronizationMode\\": \\"None\\",
          \\"operationMode\\": \\"Server\\",
          \\"autoExpandSelect\\": true,
          \\"earlyRequests\\": true
        }
      },
      \\"@i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/i18n.properties\\"
      }
    },
    \\"resources\\": {
      \\"css\\": []
    },
    \\"routing\\": {
      \\"routes\\": [
        {
          \\"pattern\\": \\":?query:\\",
          \\"name\\": \\"RestaurantList\\",
          \\"target\\": \\"RestaurantList\\"
        },
        {
          \\"pattern\\": \\"Restaurant({key}):?query:\\",
          \\"name\\": \\"RestaurantObjectPage\\",
          \\"target\\": \\"RestaurantObjectPage\\"
        },
        {
          \\"name\\": \\"DishObjectPage\\",
          \\"target\\": \\"DishObjectPage\\",
          \\"pattern\\": \\"Restaurant({key})/_Dishes({key2}):?query:\\"
        }
      ],
      \\"targets\\": {
        \\"RestaurantList\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"RestaurantList\\",
          \\"name\\": \\"sap.fe.templates.ListReport\\",
          \\"options\\": {
            \\"settings\\": {
              \\"entitySet\\": \\"Restaurant\\",
              \\"variantManagement\\": \\"Page\\",
              \\"navigation\\": {
                \\"Restaurant\\": {
                  \\"detail\\": {
                    \\"route\\": \\"RestaurantObjectPage\\"
                  }
                }
              },
              \\"initialLoad\\": \\"Enabled\\"
            }
          }
        },
        \\"RestaurantObjectPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"RestaurantObjectPage\\",
          \\"name\\": \\"sap.fe.templates.ObjectPage\\",
          \\"options\\": {
            \\"settings\\": {
              \\"editableHeaderContent\\": false,
              \\"entitySet\\": \\"Restaurant\\",
              \\"navigation\\": {
                \\"_Dishes\\": {
                  \\"detail\\": {
                    \\"route\\": \\"DishObjectPage\\"
                  }
                }
              }
            }
          }
        },
        \\"DishObjectPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"DishObjectPage\\",
          \\"name\\": \\"sap.fe.templates.ObjectPage\\",
          \\"options\\": {
            \\"settings\\": {
              \\"entitySet\\": \\"Dish\\"
            }
          }
        }
      }
    }
  },
  \\"sap.fiori\\": {
    \\"registrationIds\\": [],
    \\"archeType\\": \\"transactional\\"
  }
}
",
    "state": "modified",
  },
  "webapp/test/integration/FirstJourney.ts": Object {
    "contents": "import opaTest from \\"sap/ui/test/opaQunit\\";
import type { Given, When, Then } from \\"restaurantapp/test/integration/types/OpaJourneyTypes\\";
import runner from \\"./pages/JourneyRunner\\";

function journey() {
    QUnit.module(\\"First journey\\");

    opaTest(\\"Start application\\", function (Given: Given, When: When, Then: Then) {
        Given.iStartMyApp();
        Then.onTheRestaurantList.iSeeThisPage();
    });


    opaTest(\\"Navigate to ObjectPage\\", function (Given: Given, When: When, Then: Then) {
        // Note: this test will fail if the ListReport page doesn't show any data
        
        When.onTheRestaurantList.onFilterBar().iExecuteSearch();
        
        Then.onTheRestaurantList.onTable(\\"\\").iCheckRows();

        When.onTheRestaurantList.onTable(\\"\\").iPressRow(0);
        Then.onTheRestaurantObjectPage.iSeeThisPage();

    });

    opaTest(\\"Teardown\\", function (Given: Given, When: When, Then: Then) {
        // Cleanup
        Given.iTearDownMyApp();
    });
}

runner.run([journey]);
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <title>Integration tests</title>
    <meta charset=\\"utf-8\\">

    <script id=\\"sap-ui-bootstrap\\"
            src=\\"../../resources/sap-ui-core.js\\"
            data-sap-ui-theme='sap_fiori_3'
            data-sap-ui-resourceroots='{
                \\"restaurantapp\\": \\"../../\\"
            }'
            data-sap-ui-animation=\\"false\\"
            data-sap-ui-compatVersion=\\"edge\\"
            data-sap-ui-async=\\"true\\">
    </script>

    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../../resources/sap/ui/thirdparty/qunit-2.css\\">

    <script src=\\"opaTests.qunit.js\\"></script>

</head>
<body>
    <div id=\\"qunit\\"></div>
    <div id=\\"qunit-fixture\\"></div>
</body>
</html>
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.js": Object {
    "contents": "sap.ui.loader.config({
    shim: {
        \\"sap/ui/qunit/qunit-junit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/qunit/qunit-coverage\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/thirdparty/sinon-qunit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon\\"]
        },
        \\"sap/ui/qunit/sinon-qunit-bridge\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon-4\\"]
        }
    }
});

window.QUnit = Object.assign({}, window.QUnit, { config: { autostart: false } });

sap.ui.require(
  [
    \\"sap/ui/thirdparty/qunit-2\\",
    \\"sap/ui/qunit/qunit-junit\\",
    \\"sap/ui/qunit/qunit-coverage\\",
    \\"restaurantapp/test/integration/FirstJourney\\",
], function (QUnit) {
    \\"use strict\\";
    QUnit.start();
});
",
    "state": "modified",
  },
  "webapp/test/integration/pages/DishObjectPage.ts": Object {
    "contents": "import ObjectPage from \\"sap/fe/test/ObjectPage\\";
import type Opa5 from \\"sap/ui/test/Opa5\\";
import Press from \\"sap/ui/test/actions/Press\\";

export const actions = {
    iPressSectionIconTabFilterButton(this: Opa5, section: string) {
        return this.waitFor({
            id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
            actions: new Press()
        });
    }
};

export const assertions = {};

export default new ObjectPage(
    {
        appId: \\"restaurantapp\\",
        componentId: \\"DishObjectPage\\",
        entitySet: \\"Dish\\",
        contextPath: \\"\\"
    },
    { actions, assertions }
);
",
    "state": "modified",
  },
  "webapp/test/integration/pages/JourneyRunner.ts": Object {
    "contents": "import JourneyRunner from \\"sap/fe/test/JourneyRunner\\";
import RestaurantList from \\"./RestaurantList\\";
import RestaurantObjectPage from \\"./RestaurantObjectPage\\";

const runner = new JourneyRunner({
    launchUrl: sap.ui.require.toUrl(\\"restaurantapp\\") + \\"/index.html\\",
    pages: {
        onTheRestaurantList: RestaurantList,
        onTheRestaurantObjectPage: RestaurantObjectPage
    },
    async: true
});

export default runner;
",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantList.ts": Object {
    "contents": "import ListReport from \\"sap/fe/test/ListReport\\";

export const actions = {};

export const assertions = {};

export default new ListReport(
    {
        appId: \\"restaurantapp\\",
        componentId: \\"RestaurantList\\",
        entitySet: \\"Restaurant\\",
        contextPath: \\"\\"
    },
    { actions, assertions }
);
",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantObjectPage.ts": Object {
    "contents": "import ObjectPage from \\"sap/fe/test/ObjectPage\\";
import type Opa5 from \\"sap/ui/test/Opa5\\";
import Press from \\"sap/ui/test/actions/Press\\";

export const actions = {
    iPressSectionIconTabFilterButton(this: Opa5, section: string) {
        return this.waitFor({
            id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
            actions: new Press()
        });
    }
};

export const assertions = {};

export default new ObjectPage(
    {
        appId: \\"restaurantapp\\",
        componentId: \\"RestaurantObjectPage\\",
        entitySet: \\"Restaurant\\",
        contextPath: \\"\\"
    },
    { actions, assertions }
);
",
    "state": "modified",
  },
  "webapp/test/integration/types/OpaJourneyTypes.d.ts": Object {
    "contents": "import type Opa5 from \\"sap/ui/test/Opa5\\";
import type { actions as ListReportActions, assertions as ListReportAssertions } from \\"sap/fe/test/ListReport\\";
import type { actions as ObjectPageActions, assertions as ObjectPageAssertions } from \\"sap/fe/test/ObjectPage\\";
import type { actions as TemplatePageActions, assertions as TemplatePageAssertions } from \\"sap/fe/test/TemplatePage\\";
import type Shell from \\"sap/fe/test/Shell\\";
import type BaseArrangements from \\"sap/fe/test/BaseArrangements\\";
import type { actions as RestaurantListCustomActions, assertions as RestaurantListCustomAssertions } from \\"restaurantapp/test/integration/pages/RestaurantList\\";
import type { actions as RestaurantObjectPageCustomActions, assertions as RestaurantObjectPageCustomAssertions } from \\"restaurantapp/test/integration/pages/RestaurantObjectPage\\";

export type Given = Opa5 & BaseArrangements & {
    iTearDownMyApp: () => Given;
    iStartMyApp: (sAppHash?: string, mInUrlParameters?: object) => Given;
    and: Given;
};

export type When = Opa5 & BaseArrangements & {
    onTheRestaurantList: Opa5 & ListReportActions & TemplatePageActions & typeof RestaurantListCustomActions;
    onTheRestaurantObjectPage: Opa5 & ObjectPageActions & TemplatePageActions & typeof RestaurantObjectPageCustomActions;
    onTheShell: Shell;
};

export type Then = Opa5 & BaseArrangements & {
    onTheRestaurantList: Opa5 & ListReportAssertions & TemplatePageAssertions & typeof RestaurantListCustomAssertions;
    onTheRestaurantObjectPage: Opa5 & ObjectPageAssertions & TemplatePageAssertions & typeof RestaurantObjectPageCustomAssertions;
    onTheShell: Shell;
};
",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
  <head>
    <title>QUnit test suite</title>
    <script src=\\"../resources/sap/ui/qunit/qunit-redirect.js\\"></script>
    <script src=\\"testsuite.qunit.js\\" data-sap-ui-testsuite></script>
  </head>
  <body></body>
</html>",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.js": Object {
    "contents": "window.suite = function() {
    'use strict';

    // eslint-disable-next-line
    var oSuite = new parent.jsUnitTestSuite(),
    
    sContextPath = location.pathname.substring(0, location.pathname.lastIndexOf('/') + 1);
    oSuite.addTestPage(sContextPath + 'integration/opaTests.qunit.html');

    return oSuite;
};",
    "state": "modified",
  },
}
`;

exports[`ui5-test-writer - Integration tests Generate TypeScript OPA test files for LROP app 1`] = `
Object {
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"restaurant-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"description\\": \\"Restaurant List\\",
  \\"main\\": \\"webapp/index.html\\",
  \\"dependencies\\": {},
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"^2.14.1\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap/ux-ui5-fe-mockserver-middleware\\": \\"1\\"
  },
  \\"scripts\\": {
    \\"start\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
    \\"build\\": \\"ui5 build --clean-dest --dest dist\\",
    \\"test\\": \\"fiori run --open 'test/testsuite.qunit.html'\\"
  }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: restaurantapp
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        service:
          urlPath: /restaurant
          metadataXmlPath: ./webapp/localService/metadata.xml
          mockdataRootPath: ./webapp/localService/data
          generateMockData: true
",
    "state": "modified",
  },
  "webapp/Component.js": Object {
    "contents": "sap.ui.define(
    [\\"sap/fe/core/AppComponent\\"],
    function (Component) {
        \\"use strict\\";

        return Component.extend(\\"restaurantapp.Component\\", {
            metadata: {
                manifest: \\"json\\"
            }
        });
    }
);",
    "state": "modified",
  },
  "webapp/annotations/annotation.xml": Object {
    "contents": "<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\"/>
    </edmx:Reference>
    <edmx:Reference Uri=\\"/restaurant/$metadata\\">
        <edmx:Include Namespace=\\"RestaurantService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"local\\">
            <Annotations Target=\\"RestaurantService.Restaurant\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                        </Record>
                    </Collection>
                </Annotation>
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup1\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup1\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Dishes/@UI.LineItem#Menu\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Employees/@UI.LineItem#Staff\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Dish\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Menu\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"dishName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"dishName\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Employees\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Staff\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"fullName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"fullName\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"role\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"role\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.controller.js": Object {
    "contents": "sap.ui.define(
    [
        'sap/fe/core/PageController'
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('restaurantapp.ext.view.EmployeeView', {

        });
    }
);
",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
    xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"restaurantapp.ext.view.EmployeeView\\">
    <Page title=\\"EmployeeView\\">
        <content></content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "# This is the resource bundle for restaurantapp

#Texts for manifest.json

#XTIT: Application name
appTitle=Restaurant List

#YDES: Application description
appDescription=Restaurant List",
    "state": "modified",
  },
  "webapp/index.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Restaurant List</title>
    <style>
        html, body, body > div, #container, #container-uiarea {
            height: 100%;
        }
    </style>
    <script
        id=\\"sap-ui-bootstrap\\"
        src=\\"resources/sap-ui-core.js\\"
        data-sap-ui-theme=\\"sap_horizon\\"
        data-sap-ui-resourceroots='{
            \\"restaurantapp\\": \\"./\\"
        }'
        data-sap-ui-oninit=\\"module:sap/ui/core/ComponentSupport\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-frameOptions=\\"trusted\\"
    ></script>
</head>
<body class=\\"sapUiBody sapUiSizeCompact\\" id=\\"content\\">
    <div
        data-sap-ui-component
        data-name=\\"restaurantapp\\"
        data-id=\\"container\\"
        data-settings='{\\"id\\" : \\"restaurantapp\\"}'
        data-handle-validation=\\"true\\"
    ></div>
</body>
</html>",
    "state": "modified",
  },
  "webapp/localService/metadata.xml": Object {
    "contents": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:DataServices>
        <Schema Namespace=\\"RestaurantService\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
            <EntityContainer Name=\\"EntityContainer\\">
                <EntitySet Name=\\"Employees\\" EntityType=\\"RestaurantService.Employees\\"/>
                <EntitySet Name=\\"Dish\\" EntityType=\\"RestaurantService.Dish\\"/>
                <EntitySet Name=\\"Restaurant\\" EntityType=\\"RestaurantService.Restaurant\\">
                    <NavigationPropertyBinding Path=\\"_Dishes\\" Target=\\"Dish\\"/>
                    <NavigationPropertyBinding Path=\\"_Employees\\" Target=\\"Employees\\"/>
                </EntitySet>
            </EntityContainer>
            <EntityType Name=\\"Employees\\">
                <Key>
                    <PropertyRef Name=\\"employeeID\\"/>
                </Key>
                <Property Name=\\"employeeID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"fullName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"role\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Dish\\">
                <Key>
                    <PropertyRef Name=\\"dishID\\"/>
                </Key>
                <Property Name=\\"dishID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"dishName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Restaurant\\">
                <Key>
                    <PropertyRef Name=\\"ID\\"/>
                </Key>
                <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
                <NavigationProperty Name=\\"_Dishes\\" Type=\\"Collection(RestaurantService.Dish)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
                <NavigationProperty Name=\\"_Employees\\" Type=\\"Collection(RestaurantService.Employees)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
            </EntityType>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
    \\"_version\\": \\"1.40.0\\",
    \\"sap.app\\": {
        \\"id\\": \\"restaurantapp\\",
        \\"type\\": \\"application\\",
        \\"i18n\\": \\"i18n/i18n.properties\\",
        \\"applicationVersion\\": {
            \\"version\\": \\"0.0.1\\"
        },
        \\"title\\": \\"{{appTitle}}\\",
        \\"description\\": \\"{{appDescription}}\\",
        \\"resources\\": \\"resources.json\\",
        \\"sourceTemplate\\": {
            \\"id\\": \\"@sap/generator-fiori:lrop\\",
            \\"version\\": \\"1.7.1\\",
            \\"toolsId\\": \\"c4ddb756-9b8b-4c4e-8d46-5ef91b686336\\"
        },
        \\"dataSources\\": {
            \\"mainService\\": {
                \\"uri\\": \\"/restaurant/\\",
                \\"type\\": \\"OData\\",
                \\"settings\\": {
                    \\"annotations\\": [
                        \\"annotation\\"
                    ],
                    \\"localUri\\": \\"localService/metadata.xml\\",
                    \\"odataVersion\\": \\"4.0\\"
                }
            },
            \\"annotation\\": {
                \\"type\\": \\"ODataAnnotation\\",
                \\"uri\\": \\"annotations/annotation.xml\\",
                \\"settings\\": {
                    \\"localUri\\": \\"annotations/annotation.xml\\"
                }
            }
        }
    },
    \\"sap.ui\\": {
        \\"technology\\": \\"UI5\\",
        \\"icons\\": {
            \\"icon\\": \\"\\",
            \\"favIcon\\": \\"\\",
            \\"phone\\": \\"\\",
            \\"phone@2\\": \\"\\",
            \\"tablet\\": \\"\\",
            \\"tablet@2\\": \\"\\"
        },
        \\"deviceTypes\\": {
            \\"desktop\\": true,
            \\"tablet\\": true,
            \\"phone\\": true
        }
    },
    \\"sap.ui5\\": {
        \\"flexEnabled\\": true,
        \\"dependencies\\": {
            \\"minUI5Version\\": \\"1.105.0\\",
            \\"libs\\": {
                \\"sap.m\\": {},
                \\"sap.ui.core\\": {},
                \\"sap.ushell\\": {},
                \\"sap.fe.templates\\": {}
            }
        },
        \\"contentDensities\\": {
            \\"compact\\": true,
            \\"cozy\\": true
        },
        \\"models\\": {
            \\"i18n\\": {
                \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
                \\"settings\\": {
                    \\"bundleName\\": \\"restaurantapp.i18n.i18n\\"
                }
            },
            \\"\\": {
                \\"dataSource\\": \\"mainService\\",
                \\"preload\\": true,
                \\"settings\\": {
                    \\"synchronizationMode\\": \\"None\\",
                    \\"operationMode\\": \\"Server\\",
                    \\"autoExpandSelect\\": true,
                    \\"earlyRequests\\": true
                }
            },
            \\"@i18n\\": {
                \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
                \\"uri\\": \\"i18n/i18n.properties\\"
            }
        },
        \\"resources\\": {
            \\"css\\": []
        },
        \\"routing\\": {
            \\"routes\\": [
                {
                    \\"pattern\\": \\":?query:\\",
                    \\"name\\": \\"RestaurantList\\",
                    \\"target\\": \\"RestaurantList\\"
                },
                {
                    \\"pattern\\": \\"Restaurant({key}):?query:\\",
                    \\"name\\": \\"RestaurantObjectPage\\",
                    \\"target\\": \\"RestaurantObjectPage\\"
                }
            ],
            \\"targets\\": {
                \\"RestaurantList\\": {
                    \\"type\\": \\"Component\\",
                    \\"id\\": \\"RestaurantList\\",
                    \\"name\\": \\"sap.fe.templates.ListReport\\",
                    \\"options\\": {
                        \\"settings\\": {
                            \\"entitySet\\": \\"Restaurant\\",
                            \\"variantManagement\\": \\"Page\\",
                            \\"navigation\\": {
                                \\"Restaurant\\": {
                                    \\"detail\\": {
                                        \\"route\\": \\"RestaurantObjectPage\\"
                                    }
                                }
                            },
                            \\"initialLoad\\": \\"Enabled\\"
                        }
                    }
                },
                \\"RestaurantObjectPage\\": {
                    \\"type\\": \\"Component\\",
                    \\"id\\": \\"RestaurantObjectPage\\",
                    \\"name\\": \\"sap.fe.templates.ObjectPage\\",
                    \\"options\\": {
                        \\"settings\\": {
                            \\"editableHeaderContent\\": false,
                            \\"entitySet\\": \\"Restaurant\\",
                            \\"navigation\\": {
                            }
                        }
                    }
                }
            }
        }
    },
    \\"sap.fiori\\": {
        \\"registrationIds\\": [],
        \\"archeType\\": \\"transactional\\"
    }
}",
    "state": "modified",
  },
  "webapp/test/integration/FirstJourney.ts": Object {
    "contents": "import opaTest from \\"sap/ui/test/opaQunit\\";
import type { Given, When, Then } from \\"restaurantapp/test/integration/types/OpaJourneyTypes\\";
import runner from \\"./pages/JourneyRunner\\";

function journey() {
    QUnit.module(\\"First journey\\");

    opaTest(\\"Start application\\", function (Given: Given, When: When, Then: Then) {
        Given.iStartMyApp();
        Then.onTheRestaurantList.iSeeThisPage();
    });


    opaTest(\\"Navigate to ObjectPage\\", function (Given: Given, When: When, Then: Then) {
        // Note: this test will fail if the ListReport page doesn't show any data
        
        When.onTheRestaurantList.onFilterBar().iExecuteSearch();
        
        Then.onTheRestaurantList.onTable(\\"\\").iCheckRows();

        When.onTheRestaurantList.onTable(\\"\\").iPressRow(0);
        Then.onTheRestaurantObjectPage.iSeeThisPage();

    });

    opaTest(\\"Teardown\\", function (Given: Given, When: When, Then: Then) {
        // Cleanup
        Given.iTearDownMyApp();
    });
}

runner.run([journey]);
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <title>Integration tests</title>
    <meta charset=\\"utf-8\\">

    <script id=\\"sap-ui-bootstrap\\"
            src=\\"../../resources/sap-ui-core.js\\"
            data-sap-ui-theme='sap_fiori_3'
            data-sap-ui-resourceroots='{
                \\"restaurantapp\\": \\"../../\\"
            }'
            data-sap-ui-animation=\\"false\\"
            data-sap-ui-compatVersion=\\"edge\\"
            data-sap-ui-async=\\"true\\">
    </script>

    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../../resources/sap/ui/thirdparty/qunit-2.css\\">

    <script src=\\"opaTests.qunit.js\\"></script>

</head>
<body>
    <div id=\\"qunit\\"></div>
    <div id=\\"qunit-fixture\\"></div>
</body>
</html>
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.js": Object {
    "contents": "sap.ui.loader.config({
    shim: {
        \\"sap/ui/qunit/qunit-junit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/qunit/qunit-coverage\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/thirdparty/sinon-qunit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon\\"]
        },
        \\"sap/ui/qunit/sinon-qunit-bridge\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon-4\\"]
        }
    }
});

window.QUnit = Object.assign({}, window.QUnit, { config: { autostart: false } });

sap.ui.require(
  [
    \\"sap/ui/thirdparty/qunit-2\\",
    \\"sap/ui/qunit/qunit-junit\\",
    \\"sap/ui/qunit/qunit-coverage\\",
    \\"restaurantapp/test/integration/FirstJourney\\",
], function (QUnit) {
    \\"use strict\\";
    QUnit.start();
});
",
    "state": "modified",
  },
  "webapp/test/integration/pages/JourneyRunner.ts": Object {
    "contents": "import JourneyRunner from \\"sap/fe/test/JourneyRunner\\";
import RestaurantList from \\"./RestaurantList\\";
import RestaurantObjectPage from \\"./RestaurantObjectPage\\";

const runner = new JourneyRunner({
    launchUrl: sap.ui.require.toUrl(\\"restaurantapp\\") + \\"/index.html\\",
    pages: {
        onTheRestaurantList: RestaurantList,
        onTheRestaurantObjectPage: RestaurantObjectPage
    },
    async: true
});

export default runner;
",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantList.ts": Object {
    "contents": "import ListReport from \\"sap/fe/test/ListReport\\";

export const actions = {};

export const assertions = {};

export default new ListReport(
    {
        appId: \\"restaurantapp\\",
        componentId: \\"RestaurantList\\",
        entitySet: \\"Restaurant\\",
        contextPath: \\"\\"
    },
    { actions, assertions }
);
",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantObjectPage.ts": Object {
    "contents": "import ObjectPage from \\"sap/fe/test/ObjectPage\\";
import type Opa5 from \\"sap/ui/test/Opa5\\";
import Press from \\"sap/ui/test/actions/Press\\";

export const actions = {
    iPressSectionIconTabFilterButton(this: Opa5, section: string) {
        return this.waitFor({
            id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
            actions: new Press()
        });
    }
};

export const assertions = {};

export default new ObjectPage(
    {
        appId: \\"restaurantapp\\",
        componentId: \\"RestaurantObjectPage\\",
        entitySet: \\"Restaurant\\",
        contextPath: \\"\\"
    },
    { actions, assertions }
);
",
    "state": "modified",
  },
  "webapp/test/integration/types/OpaJourneyTypes.d.ts": Object {
    "contents": "import type Opa5 from \\"sap/ui/test/Opa5\\";
import type { actions as ListReportActions, assertions as ListReportAssertions } from \\"sap/fe/test/ListReport\\";
import type { actions as ObjectPageActions, assertions as ObjectPageAssertions } from \\"sap/fe/test/ObjectPage\\";
import type { actions as TemplatePageActions, assertions as TemplatePageAssertions } from \\"sap/fe/test/TemplatePage\\";
import type Shell from \\"sap/fe/test/Shell\\";
import type BaseArrangements from \\"sap/fe/test/BaseArrangements\\";
import type { actions as RestaurantListCustomActions, assertions as RestaurantListCustomAssertions } from \\"restaurantapp/test/integration/pages/RestaurantList\\";
import type { actions as RestaurantObjectPageCustomActions, assertions as RestaurantObjectPageCustomAssertions } from \\"restaurantapp/test/integration/pages/RestaurantObjectPage\\";

export type Given = Opa5 & BaseArrangements & {
    iTearDownMyApp: () => Given;
    iStartMyApp: (sAppHash?: string, mInUrlParameters?: object) => Given;
    and: Given;
};

export type When = Opa5 & BaseArrangements & {
    onTheRestaurantList: Opa5 & ListReportActions & TemplatePageActions & typeof RestaurantListCustomActions;
    onTheRestaurantObjectPage: Opa5 & ObjectPageActions & TemplatePageActions & typeof RestaurantObjectPageCustomActions;
    onTheShell: Shell;
};

export type Then = Opa5 & BaseArrangements & {
    onTheRestaurantList: Opa5 & ListReportAssertions & TemplatePageAssertions & typeof RestaurantListCustomAssertions;
    onTheRestaurantObjectPage: Opa5 & ObjectPageAssertions & TemplatePageAssertions & typeof RestaurantObjectPageCustomAssertions;
    onTheShell: Shell;
};
",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
  <head>
    <title>QUnit test suite</title>
    <script src=\\"../resources/sap/ui/qunit/qunit-redirect.js\\"></script>
    <script src=\\"testsuite.qunit.js\\" data-sap-ui-testsuite></script>
  </head>
  <body></body>
</html>",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.js": Object {
    "contents": "window.suite = function() {
    'use strict';

    // eslint-disable-next-line
    var oSuite = new parent.jsUnitTestSuite(),
    
    sContextPath = location.pathname.substring(0, location.pathname.lastIndexOf('/') + 1);
    oSuite.addTestPage(sContextPath + 'integration/opaTests.qunit.html');

    return oSuite;
};",
    "state": "modified",
  },
}
`;

exports[`ui5-test-writer - Integration tests Generate initial OPA test files and add more pages 1`] = `
Object {
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"restaurant-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"description\\": \\"Restaurant List\\",
  \\"main\\": \\"webapp/index.html\\",
  \\"dependencies\\": {},
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"^2.14.1\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap/ux-ui5-fe-mockserver-middleware\\": \\"1\\"
  },
  \\"scripts\\": {
    \\"start\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
    \\"build\\": \\"ui5 build --clean-dest --dest dist\\",
    \\"test\\": \\"fiori run --open 'test/testsuite.qunit.html'\\"
  }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: restaurantapp
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        service:
          urlPath: /restaurant
          metadataXmlPath: ./webapp/localService/metadata.xml
          mockdataRootPath: ./webapp/localService/data
          generateMockData: true
",
    "state": "modified",
  },
  "webapp/Component.js": Object {
    "contents": "sap.ui.define(
    [\\"sap/fe/core/AppComponent\\"],
    function (Component) {
        \\"use strict\\";

        return Component.extend(\\"restaurantapp.Component\\", {
            metadata: {
                manifest: \\"json\\"
            }
        });
    }
);",
    "state": "modified",
  },
  "webapp/annotations/annotation.xml": Object {
    "contents": "<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\"/>
    </edmx:Reference>
    <edmx:Reference Uri=\\"/restaurant/$metadata\\">
        <edmx:Include Namespace=\\"RestaurantService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"local\\">
            <Annotations Target=\\"RestaurantService.Restaurant\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                        </Record>
                    </Collection>
                </Annotation>
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup1\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup1\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Dishes/@UI.LineItem#Menu\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Employees/@UI.LineItem#Staff\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Dish\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Menu\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"dishName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"dishName\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Employees\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Staff\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"fullName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"fullName\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"role\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"role\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.controller.js": Object {
    "contents": "sap.ui.define(
    [
        'sap/fe/core/PageController'
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('restaurantapp.ext.view.EmployeeView', {

        });
    }
);
",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
    xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"restaurantapp.ext.view.EmployeeView\\">
    <Page title=\\"EmployeeView\\">
        <content></content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "# This is the resource bundle for restaurantapp

#Texts for manifest.json

#XTIT: Application name
appTitle=Restaurant List

#YDES: Application description
appDescription=Restaurant List",
    "state": "modified",
  },
  "webapp/index.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Restaurant List</title>
    <style>
        html, body, body > div, #container, #container-uiarea {
            height: 100%;
        }
    </style>
    <script
        id=\\"sap-ui-bootstrap\\"
        src=\\"resources/sap-ui-core.js\\"
        data-sap-ui-theme=\\"sap_horizon\\"
        data-sap-ui-resourceroots='{
            \\"restaurantapp\\": \\"./\\"
        }'
        data-sap-ui-oninit=\\"module:sap/ui/core/ComponentSupport\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-frameOptions=\\"trusted\\"
    ></script>
</head>
<body class=\\"sapUiBody sapUiSizeCompact\\" id=\\"content\\">
    <div
        data-sap-ui-component
        data-name=\\"restaurantapp\\"
        data-id=\\"container\\"
        data-settings='{\\"id\\" : \\"restaurantapp\\"}'
        data-handle-validation=\\"true\\"
    ></div>
</body>
</html>",
    "state": "modified",
  },
  "webapp/localService/metadata.xml": Object {
    "contents": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:DataServices>
        <Schema Namespace=\\"RestaurantService\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
            <EntityContainer Name=\\"EntityContainer\\">
                <EntitySet Name=\\"Employees\\" EntityType=\\"RestaurantService.Employees\\"/>
                <EntitySet Name=\\"Dish\\" EntityType=\\"RestaurantService.Dish\\"/>
                <EntitySet Name=\\"Restaurant\\" EntityType=\\"RestaurantService.Restaurant\\">
                    <NavigationPropertyBinding Path=\\"_Dishes\\" Target=\\"Dish\\"/>
                    <NavigationPropertyBinding Path=\\"_Employees\\" Target=\\"Employees\\"/>
                </EntitySet>
            </EntityContainer>
            <EntityType Name=\\"Employees\\">
                <Key>
                    <PropertyRef Name=\\"employeeID\\"/>
                </Key>
                <Property Name=\\"employeeID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"fullName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"role\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Dish\\">
                <Key>
                    <PropertyRef Name=\\"dishID\\"/>
                </Key>
                <Property Name=\\"dishID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"dishName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Restaurant\\">
                <Key>
                    <PropertyRef Name=\\"ID\\"/>
                </Key>
                <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
                <NavigationProperty Name=\\"_Dishes\\" Type=\\"Collection(RestaurantService.Dish)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
                <NavigationProperty Name=\\"_Employees\\" Type=\\"Collection(RestaurantService.Employees)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
            </EntityType>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
  \\"_version\\": \\"1.40.0\\",
  \\"sap.app\\": {
    \\"id\\": \\"restaurantapp\\",
    \\"type\\": \\"application\\",
    \\"i18n\\": \\"i18n/i18n.properties\\",
    \\"applicationVersion\\": {
      \\"version\\": \\"0.0.1\\"
    },
    \\"title\\": \\"{{appTitle}}\\",
    \\"description\\": \\"{{appDescription}}\\",
    \\"resources\\": \\"resources.json\\",
    \\"sourceTemplate\\": {
      \\"id\\": \\"@sap/generator-fiori:lrop\\",
      \\"version\\": \\"1.7.1\\",
      \\"toolsId\\": \\"c4ddb756-9b8b-4c4e-8d46-5ef91b686336\\"
    },
    \\"dataSources\\": {
      \\"mainService\\": {
        \\"uri\\": \\"/restaurant/\\",
        \\"type\\": \\"OData\\",
        \\"settings\\": {
          \\"annotations\\": [
            \\"annotation\\"
          ],
          \\"localUri\\": \\"localService/metadata.xml\\",
          \\"odataVersion\\": \\"4.0\\"
        }
      },
      \\"annotation\\": {
        \\"type\\": \\"ODataAnnotation\\",
        \\"uri\\": \\"annotations/annotation.xml\\",
        \\"settings\\": {
          \\"localUri\\": \\"annotations/annotation.xml\\"
        }
      }
    }
  },
  \\"sap.ui\\": {
    \\"technology\\": \\"UI5\\",
    \\"icons\\": {
      \\"icon\\": \\"\\",
      \\"favIcon\\": \\"\\",
      \\"phone\\": \\"\\",
      \\"phone@2\\": \\"\\",
      \\"tablet\\": \\"\\",
      \\"tablet@2\\": \\"\\"
    },
    \\"deviceTypes\\": {
      \\"desktop\\": true,
      \\"tablet\\": true,
      \\"phone\\": true
    }
  },
  \\"sap.ui5\\": {
    \\"flexEnabled\\": true,
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.105.0\\",
      \\"libs\\": {
        \\"sap.m\\": {},
        \\"sap.ui.core\\": {},
        \\"sap.ushell\\": {},
        \\"sap.fe.templates\\": {}
      }
    },
    \\"contentDensities\\": {
      \\"compact\\": true,
      \\"cozy\\": true
    },
    \\"models\\": {
      \\"i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"settings\\": {
          \\"bundleName\\": \\"restaurantapp.i18n.i18n\\"
        }
      },
      \\"\\": {
        \\"dataSource\\": \\"mainService\\",
        \\"preload\\": true,
        \\"settings\\": {
          \\"synchronizationMode\\": \\"None\\",
          \\"operationMode\\": \\"Server\\",
          \\"autoExpandSelect\\": true,
          \\"earlyRequests\\": true
        }
      },
      \\"@i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/i18n.properties\\"
      }
    },
    \\"resources\\": {
      \\"css\\": []
    },
    \\"routing\\": {
      \\"routes\\": [
        {
          \\"pattern\\": \\":?query:\\",
          \\"name\\": \\"RestaurantList\\",
          \\"target\\": \\"RestaurantList\\"
        },
        {
          \\"pattern\\": \\"Restaurant({key}):?query:\\",
          \\"name\\": \\"RestaurantObjectPage\\",
          \\"target\\": \\"RestaurantObjectPage\\"
        },
        {
          \\"name\\": \\"DishObjectPage\\",
          \\"target\\": \\"DishObjectPage\\",
          \\"pattern\\": \\"Restaurant({key})/_Dishes({key2}):?query:\\"
        },
        {
          \\"name\\": \\"EmployeesCustomPage\\",
          \\"target\\": \\"EmployeesCustomPage\\",
          \\"pattern\\": \\"Restaurant({key})/_Employees({_EmployeesKey}):?query:\\"
        }
      ],
      \\"targets\\": {
        \\"RestaurantList\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"RestaurantList\\",
          \\"name\\": \\"sap.fe.templates.ListReport\\",
          \\"options\\": {
            \\"settings\\": {
              \\"entitySet\\": \\"Restaurant\\",
              \\"variantManagement\\": \\"Page\\",
              \\"navigation\\": {
                \\"Restaurant\\": {
                  \\"detail\\": {
                    \\"route\\": \\"RestaurantObjectPage\\"
                  }
                }
              },
              \\"initialLoad\\": \\"Enabled\\"
            }
          }
        },
        \\"RestaurantObjectPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"RestaurantObjectPage\\",
          \\"name\\": \\"sap.fe.templates.ObjectPage\\",
          \\"options\\": {
            \\"settings\\": {
              \\"editableHeaderContent\\": false,
              \\"entitySet\\": \\"Restaurant\\",
              \\"navigation\\": {
                \\"_Dishes\\": {
                  \\"detail\\": {
                    \\"route\\": \\"DishObjectPage\\"
                  }
                },
                \\"_Employees\\": {
                  \\"detail\\": {
                    \\"route\\": \\"EmployeesCustomPage\\"
                  }
                }
              }
            }
          }
        },
        \\"DishObjectPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"DishObjectPage\\",
          \\"name\\": \\"sap.fe.templates.ObjectPage\\",
          \\"options\\": {
            \\"settings\\": {
              \\"entitySet\\": \\"Dish\\"
            }
          }
        },
        \\"EmployeesCustomPage\\": {
          \\"type\\": \\"Component\\",
          \\"id\\": \\"EmployeesCustomPage\\",
          \\"name\\": \\"sap.fe.core.fpm\\",
          \\"options\\": {
            \\"settings\\": {
              \\"viewName\\": \\"restaurantapp.ext.view.EmployeeView\\",
              \\"entitySet\\": \\"Employees\\"
            }
          }
        }
      }
    }
  },
  \\"sap.fiori\\": {
    \\"registrationIds\\": [],
    \\"archeType\\": \\"transactional\\"
  }
}
",
    "state": "modified",
  },
  "webapp/test/integration/FirstJourney.js": Object {
    "contents": "sap.ui.define([
    \\"sap/ui/test/opaQunit\\",
    \\"./pages/JourneyRunner\\"
], function (opaTest, runner) {
    \\"use strict\\";

    function journey() {
        QUnit.module(\\"First journey\\");

        opaTest(\\"Start application\\", function (Given, When, Then) {
            Given.iStartMyApp();
            Then.onTheRestaurantList.iSeeThisPage();
        });


        opaTest(\\"Navigate to ObjectPage\\", function (Given, When, Then) {
            // Note: this test will fail if the ListReport page doesn't show any data
            
            When.onTheRestaurantList.onFilterBar().iExecuteSearch();
            
            Then.onTheRestaurantList.onTable().iCheckRows();

            When.onTheRestaurantList.onTable().iPressRow(0);
            Then.onTheRestaurantObjectPage.iSeeThisPage();

        });

        opaTest(\\"Teardown\\", function (Given, When, Then) { 
            // Cleanup
            Given.iTearDownMyApp();
        });
    }

    runner.run([journey]);
});",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <title>Integration tests</title>
    <meta charset=\\"utf-8\\">

    <script id=\\"sap-ui-bootstrap\\"
            src=\\"../../resources/sap-ui-core.js\\"
            data-sap-ui-theme='sap_fiori_3'
            data-sap-ui-resourceroots='{
                \\"restaurantapp\\": \\"../../\\"
            }'
            data-sap-ui-animation=\\"false\\"
            data-sap-ui-compatVersion=\\"edge\\"
            data-sap-ui-async=\\"true\\">
    </script>

    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../../resources/sap/ui/thirdparty/qunit-2.css\\">

    <script src=\\"opaTests.qunit.js\\"></script>

</head>
<body>
    <div id=\\"qunit\\"></div>
    <div id=\\"qunit-fixture\\"></div>
</body>
</html>
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.js": Object {
    "contents": "sap.ui.loader.config({
    shim: {
        \\"sap/ui/qunit/qunit-junit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/qunit/qunit-coverage\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/thirdparty/sinon-qunit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon\\"]
        },
        \\"sap/ui/qunit/sinon-qunit-bridge\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon-4\\"]
        }
    }
});

window.QUnit = Object.assign({}, window.QUnit, { config: { autostart: false } });

sap.ui.require(
  [
    \\"sap/ui/thirdparty/qunit-2\\",
    \\"sap/ui/qunit/qunit-junit\\",
    \\"sap/ui/qunit/qunit-coverage\\",
    \\"restaurantapp/test/integration/FirstJourney\\",
], function (QUnit) {
    \\"use strict\\";
    QUnit.start();
});
",
    "state": "modified",
  },
  "webapp/test/integration/pages/DishObjectPage.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/ObjectPage', 'sap/ui/test/actions/Press'], function(ObjectPage, Press) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {
            iPressSectionIconTabFilterButton: function (section) {
                return this.waitFor({
                    id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
                    actions: new Press()
                });
            }
        },
        assertions: {}
    };

    return new ObjectPage(
        {
            appId: 'restaurantapp',
            componentId: 'DishObjectPage',
            entitySet: 'Dish'
        },
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/integration/pages/EmployeesCustomPage.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/TemplatePage'], function(TemplatePage) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {},
        assertions: {}
    };

    return new TemplatePage(
        'restaurantapp::EmployeesCustomPage',
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/integration/pages/JourneyRunner.js": Object {
    "contents": "sap.ui.define([
    \\"sap/fe/test/JourneyRunner\\",
	\\"restaurantapp/test/integration/pages/RestaurantList\\",
	\\"restaurantapp/test/integration/pages/RestaurantObjectPage\\"
], function (JourneyRunner, RestaurantList, RestaurantObjectPage) {
    'use strict';

    var runner = new JourneyRunner({
        launchUrl: sap.ui.require.toUrl('restaurantapp') + '/index.html',
        pages: {
			onTheRestaurantList: RestaurantList,
			onTheRestaurantObjectPage: RestaurantObjectPage
        },
        async: true
    });

    return runner;
});

",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantList.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/ListReport'], function(ListReport) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {},
        assertions: {}
    };

    return new ListReport(
        {
            appId: 'restaurantapp',
            componentId: 'RestaurantList',
            entitySet: 'Restaurant'
        },
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantObjectPage.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/ObjectPage', 'sap/ui/test/actions/Press'], function(ObjectPage, Press) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {
            iPressSectionIconTabFilterButton: function (section) {
                return this.waitFor({
                    id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
                    actions: new Press()
                });
            }
        },
        assertions: {}
    };

    return new ObjectPage(
        {
            appId: 'restaurantapp',
            componentId: 'RestaurantObjectPage',
            entitySet: 'Restaurant'
        },
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
  <head>
    <title>QUnit test suite</title>
    <script src=\\"../resources/sap/ui/qunit/qunit-redirect.js\\"></script>
    <script src=\\"testsuite.qunit.js\\" data-sap-ui-testsuite></script>
  </head>
  <body></body>
</html>",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.js": Object {
    "contents": "window.suite = function() {
    'use strict';

    // eslint-disable-next-line
    var oSuite = new parent.jsUnitTestSuite(),
    
    sContextPath = location.pathname.substring(0, location.pathname.lastIndexOf('/') + 1);
    oSuite.addTestPage(sContextPath + 'integration/opaTests.qunit.html');

    return oSuite;
};",
    "state": "modified",
  },
}
`;

exports[`ui5-test-writer - Integration tests Generate initial OPA test files without using the index.html file 1`] = `
Object {
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"restaurant-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"private\\": true,
  \\"description\\": \\"Restaurant List\\",
  \\"main\\": \\"webapp/index.html\\",
  \\"dependencies\\": {},
  \\"devDependencies\\": {
    \\"@ui5/cli\\": \\"^2.14.1\\",
    \\"@sap/ux-ui5-tooling\\": \\"1\\",
    \\"@sap/ux-ui5-fe-mockserver-middleware\\": \\"1\\"
  },
  \\"scripts\\": {
    \\"start\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
    \\"build\\": \\"ui5 build --clean-dest --dest dist\\",
    \\"test\\": \\"fiori run --open 'test/testsuite.qunit.html'\\"
  }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: restaurantapp
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        service:
          urlPath: /restaurant
          metadataXmlPath: ./webapp/localService/metadata.xml
          mockdataRootPath: ./webapp/localService/data
          generateMockData: true
",
    "state": "modified",
  },
  "webapp/Component.js": Object {
    "contents": "sap.ui.define(
    [\\"sap/fe/core/AppComponent\\"],
    function (Component) {
        \\"use strict\\";

        return Component.extend(\\"restaurantapp.Component\\", {
            metadata: {
                manifest: \\"json\\"
            }
        });
    }
);",
    "state": "modified",
  },
  "webapp/annotations/annotation.xml": Object {
    "contents": "<edmx:Edmx xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\" Version=\\"4.0\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
        <edmx:Include Namespace=\\"com.sap.vocabularies.UI.v1\\" Alias=\\"UI\\"/>
    </edmx:Reference>
    <edmx:Reference Uri=\\"/restaurant/$metadata\\">
        <edmx:Include Namespace=\\"RestaurantService\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\" Namespace=\\"local\\">
            <Annotations Target=\\"RestaurantService.Restaurant\\">
                <Annotation Term=\\"UI.LineItem\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                            <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                        </Record>
                    </Collection>
                </Annotation>
                <Annotation Term=\\"UI.FieldGroup\\" Qualifier=\\"GeneratedGroup1\\">
                    <Record Type=\\"UI.FieldGroupType\\">
                        <PropertyValue Property=\\"Data\\">
                            <Collection>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"ID\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"ID\\"/>
                                </Record>
                                <Record Type=\\"UI.DataField\\">
                                    <PropertyValue Property=\\"Label\\" String=\\"name\\"/>
                                    <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
                                </Record>
                            </Collection>
                        </PropertyValue>
                    </Record>
                </Annotation>
                <Annotation Term=\\"UI.Facets\\">
                    <Collection>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"ID\\" String=\\"GeneratedFacet1\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"General Information\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"@UI.FieldGroup#GeneratedGroup1\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Menu\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Dishes/@UI.LineItem#Menu\\"/>
                        </Record>
                        <Record Type=\\"UI.ReferenceFacet\\">
                            <PropertyValue Property=\\"Label\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"ID\\" String=\\"Staff\\"/>
                            <PropertyValue Property=\\"Target\\" AnnotationPath=\\"_Employees/@UI.LineItem#Staff\\"/>
                        </Record>
                    </Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Dish\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Menu\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"dishName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"dishName\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
            <Annotations Target=\\"RestaurantService.Employees\\">
                <Annotation Term=\\"UI.LineItem\\" Qualifier=\\"Staff\\">
                    <Collection>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"fullName\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"fullName\\"/>
                        </Record>
                        <Record Type=\\"UI.DataField\\">
                            <PropertyValue Property=\\"Value\\" Path=\\"role\\"/>
                            <PropertyValue Property=\\"Label\\" String=\\"role\\"/>
                        </Record></Collection>
                </Annotation>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.controller.js": Object {
    "contents": "sap.ui.define(
    [
        'sap/fe/core/PageController'
    ],
    function(PageController) {
        'use strict';

        return PageController.extend('restaurantapp.ext.view.EmployeeView', {

        });
    }
);
",
    "state": "modified",
  },
  "webapp/ext/view/EmployeeView.view.xml": Object {
    "contents": "<mvc:View xmlns:core=\\"sap.ui.core\\" xmlns:mvc=\\"sap.ui.core.mvc\\" xmlns=\\"sap.m\\"
    xmlns:html=\\"http://www.w3.org/1999/xhtml\\" controllerName=\\"restaurantapp.ext.view.EmployeeView\\">
    <Page title=\\"EmployeeView\\">
        <content></content>
    </Page>
</mvc:View>",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "# This is the resource bundle for restaurantapp

#Texts for manifest.json

#XTIT: Application name
appTitle=Restaurant List

#YDES: Application description
appDescription=Restaurant List",
    "state": "modified",
  },
  "webapp/index.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Restaurant List</title>
    <style>
        html, body, body > div, #container, #container-uiarea {
            height: 100%;
        }
    </style>
    <script
        id=\\"sap-ui-bootstrap\\"
        src=\\"resources/sap-ui-core.js\\"
        data-sap-ui-theme=\\"sap_horizon\\"
        data-sap-ui-resourceroots='{
            \\"restaurantapp\\": \\"./\\"
        }'
        data-sap-ui-oninit=\\"module:sap/ui/core/ComponentSupport\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-frameOptions=\\"trusted\\"
    ></script>
</head>
<body class=\\"sapUiBody sapUiSizeCompact\\" id=\\"content\\">
    <div
        data-sap-ui-component
        data-name=\\"restaurantapp\\"
        data-id=\\"container\\"
        data-settings='{\\"id\\" : \\"restaurantapp\\"}'
        data-handle-validation=\\"true\\"
    ></div>
</body>
</html>",
    "state": "modified",
  },
  "webapp/localService/metadata.xml": Object {
    "contents": "<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:DataServices>
        <Schema Namespace=\\"RestaurantService\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
            <EntityContainer Name=\\"EntityContainer\\">
                <EntitySet Name=\\"Employees\\" EntityType=\\"RestaurantService.Employees\\"/>
                <EntitySet Name=\\"Dish\\" EntityType=\\"RestaurantService.Dish\\"/>
                <EntitySet Name=\\"Restaurant\\" EntityType=\\"RestaurantService.Restaurant\\">
                    <NavigationPropertyBinding Path=\\"_Dishes\\" Target=\\"Dish\\"/>
                    <NavigationPropertyBinding Path=\\"_Employees\\" Target=\\"Employees\\"/>
                </EntitySet>
            </EntityContainer>
            <EntityType Name=\\"Employees\\">
                <Key>
                    <PropertyRef Name=\\"employeeID\\"/>
                </Key>
                <Property Name=\\"employeeID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"fullName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"role\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Dish\\">
                <Key>
                    <PropertyRef Name=\\"dishID\\"/>
                </Key>
                <Property Name=\\"dishID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"dishName\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"restaurantID\\" Type=\\"Edm.Int32\\"/>
            </EntityType>
            <EntityType Name=\\"Restaurant\\">
                <Key>
                    <PropertyRef Name=\\"ID\\"/>
                </Key>
                <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
                <NavigationProperty Name=\\"_Dishes\\" Type=\\"Collection(RestaurantService.Dish)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
                <NavigationProperty Name=\\"_Employees\\" Type=\\"Collection(RestaurantService.Employees)\\">
                    <OnDelete Action=\\"Cascade\\"/>
                </NavigationProperty>
            </EntityType>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
    \\"_version\\": \\"1.40.0\\",
    \\"sap.app\\": {
        \\"id\\": \\"restaurantapp\\",
        \\"type\\": \\"application\\",
        \\"i18n\\": \\"i18n/i18n.properties\\",
        \\"applicationVersion\\": {
            \\"version\\": \\"0.0.1\\"
        },
        \\"title\\": \\"{{appTitle}}\\",
        \\"description\\": \\"{{appDescription}}\\",
        \\"resources\\": \\"resources.json\\",
        \\"sourceTemplate\\": {
            \\"id\\": \\"@sap/generator-fiori:lrop\\",
            \\"version\\": \\"1.7.1\\",
            \\"toolsId\\": \\"c4ddb756-9b8b-4c4e-8d46-5ef91b686336\\"
        },
        \\"dataSources\\": {
            \\"mainService\\": {
                \\"uri\\": \\"/restaurant/\\",
                \\"type\\": \\"OData\\",
                \\"settings\\": {
                    \\"annotations\\": [
                        \\"annotation\\"
                    ],
                    \\"localUri\\": \\"localService/metadata.xml\\",
                    \\"odataVersion\\": \\"4.0\\"
                }
            },
            \\"annotation\\": {
                \\"type\\": \\"ODataAnnotation\\",
                \\"uri\\": \\"annotations/annotation.xml\\",
                \\"settings\\": {
                    \\"localUri\\": \\"annotations/annotation.xml\\"
                }
            }
        }
    },
    \\"sap.ui\\": {
        \\"technology\\": \\"UI5\\",
        \\"icons\\": {
            \\"icon\\": \\"\\",
            \\"favIcon\\": \\"\\",
            \\"phone\\": \\"\\",
            \\"phone@2\\": \\"\\",
            \\"tablet\\": \\"\\",
            \\"tablet@2\\": \\"\\"
        },
        \\"deviceTypes\\": {
            \\"desktop\\": true,
            \\"tablet\\": true,
            \\"phone\\": true
        }
    },
    \\"sap.ui5\\": {
        \\"flexEnabled\\": true,
        \\"dependencies\\": {
            \\"minUI5Version\\": \\"1.105.0\\",
            \\"libs\\": {
                \\"sap.m\\": {},
                \\"sap.ui.core\\": {},
                \\"sap.ushell\\": {},
                \\"sap.fe.templates\\": {}
            }
        },
        \\"contentDensities\\": {
            \\"compact\\": true,
            \\"cozy\\": true
        },
        \\"models\\": {
            \\"i18n\\": {
                \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
                \\"settings\\": {
                    \\"bundleName\\": \\"restaurantapp.i18n.i18n\\"
                }
            },
            \\"\\": {
                \\"dataSource\\": \\"mainService\\",
                \\"preload\\": true,
                \\"settings\\": {
                    \\"synchronizationMode\\": \\"None\\",
                    \\"operationMode\\": \\"Server\\",
                    \\"autoExpandSelect\\": true,
                    \\"earlyRequests\\": true
                }
            },
            \\"@i18n\\": {
                \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
                \\"uri\\": \\"i18n/i18n.properties\\"
            }
        },
        \\"resources\\": {
            \\"css\\": []
        },
        \\"routing\\": {
            \\"routes\\": [
                {
                    \\"pattern\\": \\":?query:\\",
                    \\"name\\": \\"RestaurantList\\",
                    \\"target\\": \\"RestaurantList\\"
                },
                {
                    \\"pattern\\": \\"Restaurant({key}):?query:\\",
                    \\"name\\": \\"RestaurantObjectPage\\",
                    \\"target\\": \\"RestaurantObjectPage\\"
                }
            ],
            \\"targets\\": {
                \\"RestaurantList\\": {
                    \\"type\\": \\"Component\\",
                    \\"id\\": \\"RestaurantList\\",
                    \\"name\\": \\"sap.fe.templates.ListReport\\",
                    \\"options\\": {
                        \\"settings\\": {
                            \\"entitySet\\": \\"Restaurant\\",
                            \\"variantManagement\\": \\"Page\\",
                            \\"navigation\\": {
                                \\"Restaurant\\": {
                                    \\"detail\\": {
                                        \\"route\\": \\"RestaurantObjectPage\\"
                                    }
                                }
                            },
                            \\"initialLoad\\": \\"Enabled\\"
                        }
                    }
                },
                \\"RestaurantObjectPage\\": {
                    \\"type\\": \\"Component\\",
                    \\"id\\": \\"RestaurantObjectPage\\",
                    \\"name\\": \\"sap.fe.templates.ObjectPage\\",
                    \\"options\\": {
                        \\"settings\\": {
                            \\"editableHeaderContent\\": false,
                            \\"entitySet\\": \\"Restaurant\\",
                            \\"navigation\\": {
                            }
                        }
                    }
                }
            }
        }
    },
    \\"sap.fiori\\": {
        \\"registrationIds\\": [],
        \\"archeType\\": \\"transactional\\"
    }
}",
    "state": "modified",
  },
  "webapp/test/integration/FirstJourney.js": Object {
    "contents": "sap.ui.define([
    \\"sap/ui/test/opaQunit\\",
    \\"./pages/JourneyRunner\\"
], function (opaTest, runner) {
    \\"use strict\\";

    function journey() {
        QUnit.module(\\"First journey\\");

        opaTest(\\"Start application\\", function (Given, When, Then) {
            Given.iStartMyApp();
            Then.onTheRestaurantList.iSeeThisPage();
        });


        opaTest(\\"Navigate to ObjectPage\\", function (Given, When, Then) {
            // Note: this test will fail if the ListReport page doesn't show any data
            
            When.onTheRestaurantList.onFilterBar().iExecuteSearch();
            
            Then.onTheRestaurantList.onTable().iCheckRows();

            When.onTheRestaurantList.onTable().iPressRow(0);
            Then.onTheRestaurantObjectPage.iSeeThisPage();

        });

        opaTest(\\"Teardown\\", function (Given, When, Then) { 
            // Cleanup
            Given.iTearDownMyApp();
        });
    }

    runner.run([journey]);
});",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
<head>
    <title>Integration tests</title>
    <meta charset=\\"utf-8\\">

    <script id=\\"sap-ui-bootstrap\\"
            src=\\"../../resources/sap-ui-core.js\\"
            data-sap-ui-theme='sap_fiori_3'
            data-sap-ui-resourceroots='{
                \\"restaurantapp\\": \\"../../\\"
            }'
            data-sap-ui-animation=\\"false\\"
            data-sap-ui-compatVersion=\\"edge\\"
            data-sap-ui-async=\\"true\\">
    </script>

    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"../../resources/sap/ui/thirdparty/qunit-2.css\\">

    <script src=\\"opaTests.qunit.js\\"></script>

</head>
<body>
    <div id=\\"qunit\\"></div>
    <div id=\\"qunit-fixture\\"></div>
</body>
</html>
",
    "state": "modified",
  },
  "webapp/test/integration/opaTests.qunit.js": Object {
    "contents": "sap.ui.loader.config({
    shim: {
        \\"sap/ui/qunit/qunit-junit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/qunit/qunit-coverage\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\"]
        },
        \\"sap/ui/thirdparty/sinon-qunit\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon\\"]
        },
        \\"sap/ui/qunit/sinon-qunit-bridge\\": {
            deps: [\\"sap/ui/thirdparty/qunit-2\\", \\"sap/ui/thirdparty/sinon-4\\"]
        }
    }
});

window.QUnit = Object.assign({}, window.QUnit, { config: { autostart: false } });

sap.ui.require(
  [
    \\"sap/ui/thirdparty/qunit-2\\",
    \\"sap/ui/qunit/qunit-junit\\",
    \\"sap/ui/qunit/qunit-coverage\\",
    \\"restaurantapp/test/integration/FirstJourney\\",
], function (QUnit) {
    \\"use strict\\";
    QUnit.start();
});
",
    "state": "modified",
  },
  "webapp/test/integration/pages/JourneyRunner.js": Object {
    "contents": "sap.ui.define([
    \\"sap/fe/test/JourneyRunner\\",
	\\"restaurantapp/test/integration/pages/RestaurantList\\",
	\\"restaurantapp/test/integration/pages/RestaurantObjectPage\\"
], function (JourneyRunner, RestaurantList, RestaurantObjectPage) {
    'use strict';

    var runner = new JourneyRunner({
        launchUrl: sap.ui.require.toUrl('restaurantapp') + '/test/flpSandbox.html?sap-ui-xx-viewCache=false#restaurantApp-tile',
        pages: {
			onTheRestaurantList: RestaurantList,
			onTheRestaurantObjectPage: RestaurantObjectPage
        },
        async: true
    });

    return runner;
});

",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantList.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/ListReport'], function(ListReport) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {},
        assertions: {}
    };

    return new ListReport(
        {
            appId: 'restaurantapp',
            componentId: 'RestaurantList',
            entitySet: 'Restaurant'
        },
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/integration/pages/RestaurantObjectPage.js": Object {
    "contents": "sap.ui.define(['sap/fe/test/ObjectPage', 'sap/ui/test/actions/Press'], function(ObjectPage, Press) {
    'use strict';

    var CustomPageDefinitions = {
        actions: {
            iPressSectionIconTabFilterButton: function (section) {
                return this.waitFor({
                    id: new RegExp(\`.*--fe::FacetSection::\${section}-anchor$\`),
                    actions: new Press()
                });
            }
        },
        assertions: {}
    };

    return new ObjectPage(
        {
            appId: 'restaurantapp',
            componentId: 'RestaurantObjectPage',
            entitySet: 'Restaurant'
        },
        CustomPageDefinitions
    );
});",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.html": Object {
    "contents": "<!DOCTYPE html>
<html>
  <head>
    <title>QUnit test suite</title>
    <script src=\\"../resources/sap/ui/qunit/qunit-redirect.js\\"></script>
    <script src=\\"testsuite.qunit.js\\" data-sap-ui-testsuite></script>
  </head>
  <body></body>
</html>",
    "state": "modified",
  },
  "webapp/test/testsuite.qunit.js": Object {
    "contents": "window.suite = function() {
    'use strict';

    // eslint-disable-next-line
    var oSuite = new parent.jsUnitTestSuite(),
    
    sContextPath = location.pathname.substring(0, location.pathname.lastIndexOf('/') + 1);
    oSuite.addTestPage(sContextPath + 'integration/opaTests.qunit.html');

    return oSuite;
};",
    "state": "modified",
  },
}
`;
